Project

General

Profile

Actions

Bug #14777

closed

"RadosModel.h: 1223: FAILED assert(old_value.header == header)" in rados-jewel-distro-basic-smithi

Added by Yuri Weinstein about 8 years ago. Updated about 8 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
Backport:
hammer,infernalis
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rados
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Run: http://pulpito.ceph.com/teuthology-2016-02-15_22:00:05-rados-jewel-distro-basic-smithi/
Job: 11194
Logs: http://qa-proxy.ceph.com/teuthology/teuthology-2016-02-15_22:00:05-rados-jewel-distro-basic-smithi/11194/teuthology.log

2016-02-16T00:55:47.189 INFO:tasks.rados.rados.0.smithi001.stderr:./test/osd/RadosModel.h: In function 'virtual void ReadOp::_finish(TestOp::CallbackInfo*)' thread 7f64d17fa700 time 2016-02-16 08:55:47.187977
2016-02-16T00:55:47.189 INFO:tasks.rados.rados.0.smithi001.stderr:./test/osd/RadosModel.h: 1223: FAILED assert(old_value.header == header)
2016-02-16T00:55:47.189 INFO:tasks.rados.rados.0.smithi001.stderr: ceph version 10.0.3-882-g78799a9 (78799a9c92e808a8aa7b51a9450494e59cd13f54)
2016-02-16T00:55:47.190 INFO:tasks.rados.rados.0.smithi001.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x85) [0x7f64e7e03225]
2016-02-16T00:55:47.190 INFO:tasks.rados.rados.0.smithi001.stderr: 2: (ReadOp::_finish(TestOp::CallbackInfo*)+0x756) [0x7f64e7deb6f6]
2016-02-16T00:55:47.190 INFO:tasks.rados.rados.0.smithi001.stderr: 3: (()+0xa6b6d) [0x7f64de485b6d]
2016-02-16T00:55:47.190 INFO:tasks.rados.rados.0.smithi001.stderr: 4: (()+0x7c889) [0x7f64de45b889]
2016-02-16T00:55:47.190 INFO:tasks.rados.rados.0.smithi001.stderr: 5: (()+0x14cefe) [0x7f64de52befe]
2016-02-16T00:55:47.190 INFO:tasks.rados.rados.0.smithi001.stderr: 6: (()+0x7dc5) [0x7f64dd84bdc5]
2016-02-16T00:55:47.191 INFO:tasks.rados.rados.0.smithi001.stderr: 7: (clone()+0x6d) [0x7f64dc73221d]
2016-02-16T00:55:47.191 INFO:tasks.rados.rados.0.smithi001.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

Related issues 1 (0 open1 closed)

Related to Ceph - Bug #16496: "FAILED assert(old_value.header == header)" in upgrade:hammer-x-jewel-distro-basic-vpsCan't reproduce06/27/2016

Actions
Actions #1

Updated by Samuel Just about 8 years ago

  • Priority changed from Normal to Urgent
Actions #2

Updated by Sage Weil about 8 years ago

  • Status changed from New to Can't reproduce
Actions #3

Updated by Yuri Weinstein about 8 years ago

  • Status changed from Can't reproduce to New

Run: http://pulpito.ceph.com/teuthology-2016-03-29_22:00:01-rados-jewel-distro-basic-smithi/
Job: ['96341']
Logs: http://qa-proxy.ceph.com/teuthology/teuthology-2016-03-29_22:00:01-rados-jewel-distro-basic-smithi/96341/teuthology.log

2016-03-31T10:29:44.279 INFO:tasks.rados.rados.0.smithi056.stdout:1627:  finishing copy_from racing read to smithi05629519-647 0123456789101112131415161718192021222324252627282930313233343536373839404142434445464748495051525354555657585960616263646566676869707172737475767778798081828384858687888990919293949596979899100101102103104105106107108109110111112113114115116117118119120121122123124125126127128129130131132133134135136137138139140141142143144145146147148149150151152153154155156157158159160161162163164165166167168169170171172173174175176177178179180181182183184185186187188189190191192193194195196197198199200201202203204205206207208209210211212213214215216217218219220221222223224225226227228229230231232233234235236237238239240241242243244245246247248249250251252253254255256257258259260261262263264265266267268269270271272273274275276277278279280281282283284285286287288289290291292293294295296297298299
2016-03-31T10:29:44.279 INFO:tasks.rados.rados.0.smithi056.stdout:1629:  expect (ObjNum 782 snap 0 seq_num 782)
2016-03-31T10:29:44.410 INFO:tasks.rados.rados.0.smithi056.stderr:1629: oid 502 header does not match, old size: 288 new size 0
2016-03-31T10:29:44.410 INFO:tasks.rados.rados.0.smithi056.stderr:./test/osd/RadosModel.h: In function 'virtual void ReadOp::_finish(TestOp::CallbackInfo*)' thread 7f2fdeffd700 time 2016-03-31 17:29:44.408425
2016-03-31T10:29:44.410 INFO:tasks.rados.rados.0.smithi056.stderr:./test/osd/RadosModel.h: 1223: FAILED assert(old_value.header == header)
2016-03-31T10:29:44.411 INFO:tasks.rados.rados.0.smithi056.stderr: ceph version 10.1.0-265-g88a183b (88a183bd85ed1cab287041d0fa40630e835d4ba0)
2016-03-31T10:29:44.411 INFO:tasks.rados.rados.0.smithi056.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x8b) [0x7f2ff5c2b54b]
2016-03-31T10:29:44.411 INFO:tasks.rados.rados.0.smithi056.stderr: 2: (ReadOp::_finish(TestOp::CallbackInfo*)+0x72c) [0x7f2ff5c1405c]
2016-03-31T10:29:44.411 INFO:tasks.rados.rados.0.smithi056.stderr: 3: (()+0x98f4d) [0x7f2fec23bf4d]
2016-03-31T10:29:44.411 INFO:tasks.rados.rados.0.smithi056.stderr: 4: (()+0x827f9) [0x7f2fec2257f9]
2016-03-31T10:29:44.411 INFO:tasks.rados.rados.0.smithi056.stderr: 5: (()+0x1632d6) [0x7f2fec3062d6]
2016-03-31T10:29:44.412 INFO:tasks.rados.rados.0.smithi056.stderr: 6: (()+0x8182) [0x7f2febb73182]
2016-03-31T10:29:44.412 INFO:tasks.rados.rados.0.smithi056.stderr: 7: (clone()+0x6d) [0x7f2fea4e447d]
2016-03-31T10:29:44.412 INFO:tasks.rados.rados.0.smithi056.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
Actions #4

Updated by Samuel Just about 8 years ago

description: rados/thrash/{hobj-sort.yaml rados.yaml 0-size-min-size-overrides/3-size-2-min-size.yaml
1-pg-log-overrides/short_pg_log.yaml clusters/{fixed-2.yaml openstack.yaml} fs/ext4.yaml
msgr/simple.yaml msgr-failures/few.yaml thrashers/mapgap.yaml workloads/small-objects.yaml}

It's a short_pg_log.yaml run, that might be related.

Actions #5

Updated by Samuel Just about 8 years ago

1:e5eee287:::smithi05629519-502:head rwstate(none n=0 w=0) oi: 1:e5eee287:::smithi05629519-502:head(139'486 client.4127.0:5493 dirty|data_digest s 3143074

Looks like the omap flag isn't set, so we didn't check the header. Hmm

Actions #6

Updated by Samuel Just about 8 years ago

  • Priority changed from Urgent to Immediate
Actions #7

Updated by Samuel Just about 8 years ago

  • Assignee set to Samuel Just
Actions #8

Updated by Samuel Just about 8 years ago

  • Status changed from New to 7
Actions #9

Updated by Samuel Just about 8 years ago

_rollback_to doesn't copy over flags.

Actions #10

Updated by Samuel Just about 8 years ago

  • Backport set to hammer,infernalis
Actions #11

Updated by Yuri Weinstein about 8 years ago

One more occurrence..
Run: http://pulpito.ceph.com/teuthology-2016-04-04_22:00:02-rados-jewel-distro-basic-smithi/
Job: 108362
Logs: http://qa-proxy.ceph.com/teuthology/teuthology-2016-04-04_22:00:02-rados-jewel-distro-basic-smithi/108362/teuthology.log

2016-04-05T03:36:56.928 INFO:tasks.rados.rados.0.smithi037.stderr:./test/osd/RadosModel.h: In function 'virtual void ReadOp::_finish(TestOp::CallbackInfo*)' thread 7f2752ffd700 time 2016-04-05 10:36:56.929812
2016-04-05T03:36:56.928 INFO:tasks.rados.rados.0.smithi037.stderr:./test/osd/RadosModel.h: 1223: FAILED assert(old_value.header == header)
2016-04-05T03:36:56.928 INFO:tasks.rados.rados.0.smithi037.stderr: ceph version 10.1.0-445-g370e4f7 (370e4f773a5347a2d0c0493ccf3dc55909b75bce)
2016-04-05T03:36:56.929 INFO:tasks.rados.rados.0.smithi037.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x8b) [0x7f276989c56b]
2016-04-05T03:36:56.929 INFO:tasks.rados.rados.0.smithi037.stderr: 2: (ReadOp::_finish(TestOp::CallbackInfo*)+0x72c) [0x7f276988507c]
2016-04-05T03:36:56.929 INFO:tasks.rados.rados.0.smithi037.stderr: 3: (()+0x98f7d) [0x7f275feabf7d]
2016-04-05T03:36:56.929 INFO:tasks.rados.rados.0.smithi037.stderr: 4: (()+0x82829) [0x7f275fe95829]
2016-04-05T03:36:56.929 INFO:tasks.rados.rados.0.smithi037.stderr: 5: (()+0x163306) [0x7f275ff76306]
2016-04-05T03:36:56.929 INFO:tasks.rados.rados.0.smithi037.stderr: 6: (()+0x8182) [0x7f275f7e3182]
2016-04-05T03:36:56.930 INFO:tasks.rados.rados.0.smithi037.stderr: 7: (clone()+0x6d) [0x7f275e15447d]
2016-04-05T03:36:56.930 INFO:tasks.rados.rados.0.smithi037.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
Actions #13

Updated by Samuel Just about 8 years ago

  • Status changed from 7 to Resolved
Actions #14

Updated by Yuri Weinstein almost 8 years ago

  • Related to Bug #16496: "FAILED assert(old_value.header == header)" in upgrade:hammer-x-jewel-distro-basic-vps added
Actions

Also available in: Atom PDF