ReplicatedPG::_rollback_to: update the OMAP flag

We don't simply copy over the whole flag field because not all values
should necessarily be carried over from the clone.  Particularly,
FLAG_CACHE_PIN should not be overridden.

Fixes: http://tracker.ceph.com/issues/14777
Backport: hammer, infernalis
Signed-off-by: Samuel Just <sjust@redhat.com>